--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,8 +10,7 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": false,
+    "allowImportingTsExtensions": false,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
