--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "start": "node server.cjs && serve -s dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
@@ -22,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "redis": "^5.8.2",
+    "serve": "^14.2.5",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
